--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:13306/blog?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/blog?serverTimezone=UTC
 spring.datasource.username=kkh
-spring.datasource.password=rhkdgns0104!
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
